# ascii-forge

./: Cargo.toml  Makefile  README.md  devenv.nix
examples/: borders.rs  confirmation.rs  cursor.rs  event_visualizer.rs  inline.rs  input_validator.rs  layout.rs  multiwidth.rs  simple.rs  space_invaders.rs
src/: app.rs  buffer.rs  cell.rs  input.rs  layout.rs  lib.rs  math.rs  prelude.rs  render.rs  scene.rs  window.rs
src/elements/: mod.rs  nine_slice.rs
src/renderer/: buffer.rs  cell.rs  mod.rs  render.rs
src/widgets/: border.rs  mod.rs
