[package]
name = "ascii-forge"
version="0.0.0"
edition = "2021"
description = "A Minimal TUI Ascii Application Engine that simplifies the use of crossterm"
readme = "README.md"
repository = "https://github.com/TheEmeraldBee/ascii-forge"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compact_str = "0.7.1"
crossterm = "0.27.0"

[features]
keyboard = []

[[example]]
name="space_invaders"
required-features=["keyboard"]

[[example]]
name="event_visualizer"
required-features=["keyboard"]
