[package]
name = "ascii-forge"
version="0.0.0"
edition = "2021"
description = "A Minimal TUI Ascii Application Engine that simplifies the use of crossterm"
readme = "README.md"
repository = "https://github.com/TheEmeraldBee/ascii-forge"
license = "MIT OR Apache-2.0"

[dependencies]
compact_str = "0.9.0"
crossterm = "0.29.0"
unicode-width = "0.2.1"

[dev-dependencies]
regex = "1.10.3"

[features]
default = []
serde = ["crossterm/serde"]
